--- a/parcial2_ds9_24/css/login.css
+++ b/parcial2_ds9_24/css/login.css
@@ -55,6 +55,21 @@ input[type="password"] {
     font-weight: bold;
 }
 
+
+
+/* Estilos del botón de inicio de sesión */
+#btnregistrarse {
+    background-color: #634caf;
+    color: #ffffff;
+    padding: 12px 20px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    width: 100%;
+    font-weight: bold;
+    margin-top: 1rem;
+}
+
 #btnsubmit:hover {
     background-color: #45a049;
 }
